--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -30,6 +30,9 @@ pytz = "^2025.2"
 
 
 
+[tool.poetry.group.dev.dependencies]
+pip-licenses = "^5.0.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
